Fixed spacing issue on mobile word of the day
Mobile word o the day spacing issue fixed

--- a/src/_scss/pages/homepageUpdate/_wordOfTheDay.scss
+++ b/src/_scss/pages/homepageUpdate/_wordOfTheDay.scss
@@ -114,6 +114,7 @@
     text-align: center;
     font-weight: $font-semibold;
     margin-bottom: rem(4);
+    margin-top: rem(0);
   }
   .word-of-the-day-paragraph-two{
     font-size: $font-size-16;
